28.03.2006
Changes by Nuno Ramiro
	- Fixed: Client crash.
	- Changed: Small changes under Client (packets).
	- Fixed: Sound has been fixed.

27.03.2006
Changes by Nuno Ramiro
	- Fixed: Memory leak under ArtLoader.
	- Fixed: Memory leak under MotiveBasedLight.

26.03.2006
Changes by Florian Fischer (SiENcE)
	- Huecolor Bug fixed: just added id--; to cHueLoader::getHue.
	- removed several hue-1 hacks from TextManager.cpp.

26.03.2006
Changes by Nuno Ramiro
	- Stability: More memory leaks.
	- Code cleanup.
	- Loading improvements.
	- Fixed: Gump Memory leak.

25.03.2006
Changes by Nuno Ramiro
	- Stability: Fixed more memory leaks.

24.03.2006
Changes by Nuno Ramiro	
	- Changed: More debug under RadioBoxes / Checkboxes.
	- Added: Gumps can now have flag "noclose".

23.03.2006
Changes by Nuno Ramiro
	- Changed: RadioBoxes should now show (work in progress).
	- Added: Gumps can now have the flag "noresize".

24.03.2006
Changes by Florian Fischer (SiENcE)
	- updated granny_aos.xml to support 8th Aniv. additions

22.03.2006
Changes by Nuno Ramiro
	- Fixed: 110k Memory leaks (No joking) under Granny models.
	- Fixed: Granny Bones memory leak.
	- Fixed: Linux compatibility.
	- Added: RemoveFlag( int flag ) under control.
	- Added: Act_GumpDialog's noresize handler.

21.03.2006
Changes by Nuno Ramiro
	- Added: Pause() and Stop() under Music.
	- Fixed: Many Drag&Drop memory leaks.
	- Fixed: Texture/Bitmask memory leak.

14.03.2006
Changes by Nuno Ramiro
	- Paperdoll open memory leak.
	- Paperdoll close memory leak.
	- BackPack memory leak.

13.03.2006
Changes by Nuno Ramiro
	- Stability.
	- Debug.
	- Crash fixes.
	- Chat / Talk bug fix.
	- GUI/Menu click crash fix.

12.03.2006
Changes by Nuno Ramiro
	- More debug.
	- Small fixes / Memory leaks.

11.03.2006
Changes by Nuno Ramiro
	- Small debug changes.
	- Memory leaks (mainly CSL and GUI files).
	- Debug.

10.03.2006
Changes by Nuno Ramiro
	- Logger was not working 100% under linux (Fixed).

10.03.2006